--- a/QueUp/StoryBoard/Base.lproj/Main.storyboard
+++ b/QueUp/StoryBoard/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -98,16 +99,62 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="nkd-Ur-7Yi">
-                                <rect key="frame" x="0.0" y="88" width="390" height="756"/>
+                                <rect key="frame" x="0.0" y="140" width="390" height="704"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <view key="tableHeaderView" contentMode="scaleToFill" id="uJD-xH-LBd">
-                                    <rect key="frame" x="0.0" y="0.0" width="390" height="1"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="390" height="80"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                    <subviews>
+                                        <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="zDl-Pk-4YA">
+                                            <rect key="frame" x="0.0" y="10" width="390" height="60"/>
+                                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="60" id="2FN-nE-irL"/>
+                                            </constraints>
+                                            <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="20" id="mOQ-to-KOq">
+                                                <size key="itemSize" width="128" height="128"/>
+                                                <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                                <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                                <inset key="sectionInset" minX="20" minY="0.0" maxX="20" maxY="0.0"/>
+                                            </collectionViewFlowLayout>
+                                            <cells>
+                                                <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="UserCollectionViewCell" id="27l-1U-FFQ" customClass="UserCollectionViewCell" customModule="QueUp" customModuleProvider="target">
+                                                    <rect key="frame" x="20" y="0.0" width="60" height="60"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="F8c-Ch-nY2">
+                                                        <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
+                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                        <subviews>
+                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="a.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="f6B-a8-nW4">
+                                                                <rect key="frame" x="0.0" y="1" width="60" height="58.666666666666671"/>
+                                                                <constraints>
+                                                                    <constraint firstAttribute="width" constant="60" id="J4S-ZM-jrJ"/>
+                                                                    <constraint firstAttribute="width" secondItem="f6B-a8-nW4" secondAttribute="height" multiplier="1:1" id="WC8-Ho-s5B"/>
+                                                                </constraints>
+                                                            </imageView>
+                                                        </subviews>
+                                                        <constraints>
+                                                            <constraint firstItem="f6B-a8-nW4" firstAttribute="centerX" secondItem="F8c-Ch-nY2" secondAttribute="centerX" id="Bto-pU-bsR"/>
+                                                            <constraint firstItem="f6B-a8-nW4" firstAttribute="centerY" secondItem="F8c-Ch-nY2" secondAttribute="centerY" id="Nao-2t-hCV"/>
+                                                        </constraints>
+                                                    </collectionViewCellContentView>
+                                                    <size key="customSize" width="60" height="60"/>
+                                                    <connections>
+                                                        <outlet property="imageView" destination="f6B-a8-nW4" id="56c-lf-5KU"/>
+                                                    </connections>
+                                                </collectionViewCell>
+                                            </cells>
+                                        </collectionView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="zDl-Pk-4YA" firstAttribute="centerY" secondItem="uJD-xH-LBd" secondAttribute="centerY" id="Jtr-7a-tgy"/>
+                                        <constraint firstItem="zDl-Pk-4YA" firstAttribute="leading" secondItem="uJD-xH-LBd" secondAttribute="leading" id="W6R-8Y-y7T"/>
+                                        <constraint firstAttribute="trailing" secondItem="zDl-Pk-4YA" secondAttribute="trailing" id="upm-Ow-V0y"/>
+                                    </constraints>
                                 </view>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="PlaylistTableViewCell" rowHeight="68" id="UX8-MF-f0z" customClass="PlaylistTableViewCell" customModule="QueUp" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="50" width="390" height="68"/>
+                                        <rect key="frame" x="0.0" y="129" width="390" height="68"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="UX8-MF-f0z" id="XgF-v3-q5w">
                                             <rect key="frame" x="0.0" y="0.0" width="390" height="68"/>
@@ -175,10 +222,10 @@
                         <viewLayoutGuide key="safeArea" id="rmL-cH-SjV"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="nkd-Ur-7Yi" firstAttribute="top" secondItem="rmL-cH-SjV" secondAttribute="top" id="85g-WZ-xzP"/>
                             <constraint firstItem="IA3-7g-vvJ" firstAttribute="centerX" secondItem="Yrx-Vj-9rn" secondAttribute="centerX" id="W3k-WQ-bF0"/>
                             <constraint firstAttribute="bottom" secondItem="nkd-Ur-7Yi" secondAttribute="bottom" id="f0z-2P-M39"/>
                             <constraint firstItem="nkd-Ur-7Yi" firstAttribute="trailing" secondItem="rmL-cH-SjV" secondAttribute="trailing" id="tmV-Uz-RIS"/>
+                            <constraint firstItem="nkd-Ur-7Yi" firstAttribute="top" secondItem="Yrx-Vj-9rn" secondAttribute="top" constant="140" id="xU9-Lk-1yq"/>
                             <constraint firstItem="nkd-Ur-7Yi" firstAttribute="leading" secondItem="rmL-cH-SjV" secondAttribute="leading" id="xe4-cx-zOo"/>
                             <constraint firstItem="IA3-7g-vvJ" firstAttribute="centerY" secondItem="Yrx-Vj-9rn" secondAttribute="centerY" id="zaL-US-0yQ"/>
                         </constraints>
@@ -191,6 +238,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="addSongButton" destination="IA3-7g-vvJ" id="qrp-wk-f1R"/>
+                        <outlet property="collectionView" destination="zDl-Pk-4YA" id="QPC-AL-fEZ"/>
                         <outlet property="tableView" destination="nkd-Ur-7Yi" id="bdl-Xa-M3M"/>
                     </connections>
                 </viewController>
@@ -442,6 +490,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="a.circle.fill" catalog="system" width="128" height="121"/>
         <image name="ellipsis" catalog="system" width="128" height="37"/>
         <image name="plus.circle" catalog="system" width="128" height="121"/>
         <systemColor name="secondaryLabelColor">
