--- a/QueUp/StoryBoard/Base.lproj/Main.storyboard
+++ b/QueUp/StoryBoard/Base.lproj/Main.storyboard
@@ -755,8 +755,40 @@
                                             <outlet property="linkStatusButton" destination="9b5-d6-Bdn" id="bv2-sl-5em"/>
                                         </connections>
                                     </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="FairQueueSwitchTableViewCell" id="8kl-bH-Ttl" customClass="FairQueueSwitchTableViewCell" customModule="QueUp" customModuleProvider="target">
+                                        <rect key="frame" x="20" y="215" width="388" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="8kl-bH-Ttl" id="dxV-S8-io7">
+                                            <rect key="frame" x="0.0" y="0.0" width="388" height="44"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Fair Queue" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ajp-gI-8cI">
+                                                    <rect key="frame" x="20" y="10.333333333333334" width="86" height="23.333333333333329"/>
+                                                    <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cX1-7k-GhL">
+                                                    <rect key="frame" x="319" y="6.6666666666666679" width="51" height="31.000000000000004"/>
+                                                    <connections>
+                                                        <action selector="fairQueueSwitchDidChange:" destination="8kl-bH-Ttl" eventType="valueChanged" id="GGS-eh-12w"/>
+                                                    </connections>
+                                                </switch>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="cX1-7k-GhL" secondAttribute="trailing" constant="20" symbolic="YES" id="Abu-ze-6Uy"/>
+                                                <constraint firstItem="cX1-7k-GhL" firstAttribute="centerY" secondItem="dxV-S8-io7" secondAttribute="centerY" id="DS4-gc-Bl1"/>
+                                                <constraint firstItem="Ajp-gI-8cI" firstAttribute="leading" secondItem="dxV-S8-io7" secondAttribute="leading" constant="20" symbolic="YES" id="HzR-ZG-kYk"/>
+                                                <constraint firstItem="Ajp-gI-8cI" firstAttribute="centerY" secondItem="dxV-S8-io7" secondAttribute="centerY" id="fAl-7q-eMf"/>
+                                                <constraint firstItem="cX1-7k-GhL" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Ajp-gI-8cI" secondAttribute="trailing" constant="8" symbolic="YES" id="uGm-4p-shj"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="fairQueueSwitch" destination="cX1-7k-GhL" id="h1f-YA-TTU"/>
+                                        </connections>
+                                    </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="RoomInfoTableViewCell" textLabel="kfL-O0-am8" imageView="3ol-6z-smI" style="IBUITableViewCellStyleDefault" id="lKU-Yg-PtZ" customClass="RoomInfoTableViewCell" customModule="QueUp" customModuleProvider="target">
-                                        <rect key="frame" x="20" y="215" width="388" height="47"/>
+                                        <rect key="frame" x="20" y="259" width="388" height="47"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="lKU-Yg-PtZ" id="IVA-EG-V6C">
                                             <rect key="frame" x="0.0" y="0.0" width="388" height="47"/>
